--- a/MinerGame/Pages/SettingPage.xaml
+++ b/MinerGame/Pages/SettingPage.xaml
@@ -9,6 +9,9 @@
       Title="SettingPage">
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <Button x:Name="buttonBack" Content="Вернуться" HorizontalAlignment="Center" Margin="0,385,0,0" VerticalAlignment="Top" Width="214" Height="60" Background="#59FF0000" BorderBrush="Red" FontFamily="Arial" FontSize="15" Click="buttonBack_Click"/>
         <Button x:Name="buttonSave" Content="Сохранить" HorizontalAlignment="Center" Margin="0,307,0,0" VerticalAlignment="Top" Background="#591FFF00" BorderBrush="#FF1FFF00" Width="214" Height="60" FontFamily="Arial Black" FontSize="15" Click="buttonSave_Click"/>
         <Rectangle Height="279" Margin="10,10,10,0" Stroke="Black" VerticalAlignment="Top" Fill="#6CFFFFFF"/>
@@ -34,5 +37,16 @@
                 </TransformGroup>
             </Slider.RenderTransform>
         </Slider>
+
+        <Label Content="Используемый IP:" HorizontalAlignment="Right" Margin="0,32,181,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="15"/>
+        <TextBox x:Name="ip" Margin="0,59,187,0" Text="127.0.0.1" MaxLines="1" MaxLength="15" FontSize="15" FontFamily="Arial" TextWrapping="Wrap" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Width="124"/>
+
+        <Label Content="Используемый порт:" HorizontalAlignment="Right" Margin="0,131,164,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="15"/>
+        <TextBox x:Name="port" Margin="0,158,187,0" Text="7777" MaxLines="1" MaxLength="5" FontSize="15" FontFamily="Arial" TextWrapping="Wrap" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Width="124" />
+
+        <Label Content="Использовать свободный порт:" HorizontalAlignment="Right" Margin="0,206,90,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="15"/>
+        <CheckBox x:Name="freePortCheck" Margin="0,212,70,0" Width="15" Click="freePortCheck_Click" HorizontalAlignment="Right" Height="15" VerticalAlignment="Top"/>
+
+        <Label x:Name="error" Content="@error" Margin="0,190,350,170" Foreground="Red" Visibility="Hidden" HorizontalAlignment="Right" Width="425"></Label>
     </Grid>
 </Page>
