--- a/MinerGame/Pages/EndPage.xaml
+++ b/MinerGame/Pages/EndPage.xaml
@@ -6,7 +6,9 @@
       xmlns:local="clr-namespace:MinerGame.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="EndPage">
+      Title="EndPage"
+      Loaded="Page_Loaded"
+      >
 
     <Grid>
         <Rectangle HorizontalAlignment="Center" Height="430" Stroke="Black" VerticalAlignment="Center" Width="477" Fill="#6CFFFFFF"/>
